--- a/package.json
+++ b/package.json
@@ -6,18 +6,11 @@
   "license": "MIT",
   "repository": "git@github.com:paraofheaven/request-proxy.git",
   "scripts": {
-    "prepublish": "npm run lint",
+    "prePublish": "npm run lint" ,
     "lint": "./node_modules/.bin/eslint index.js"
   },
   "dependencies": {
     "request": "^2.55.0",
     "lodash": "^4.11.1"
-  },
-  "devDependencies": {
-    "eslint": "^3.6.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0"
   }
 }
